tests for index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<!-- Chrome, Firefox OS, Opera and Vivaldi -->
-	<meta name="theme-color" content="#196143">
+	<meta name="theme-color" content="#FF0000">
 	<!-- Windows Phone -->
 	<meta name="msapplication-navbutton-color" content="#FF0000">
 	<!-- iOS Safari -->
