more homepage tests

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: MotoBasics: Live to Ride, Ride Safe to Live!
+title: MotoBasics | Live to Ride, Ride Safe to Live!
 layout: homepage
 published: true
 ---
