--- a/getting-started.html
+++ b/getting-started.html
@@ -6,3 +6,11 @@ published: true
 
 <h1>Getting Started</h1>
 <br />
+
+<ul>
+  {% for post in site.categories.getting-started %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
