adding page to posts

--- a/_posts/2016-11-6-TYSKBBAM.html
+++ b/_posts/2016-11-6-TYSKBBAM.html
@@ -1,5 +1,5 @@
 ---
-title: "Things You Should Know Before Buying a Motorcycle | MotoBasics.com"
+title: "Things You Should Know Before Buying a Motorcycle"
 layout: "default"
 published: true
 categories: "getting-started"
