added post image and post layout

--- a/_posts/2016-11-6-TYSKBBAM.html
+++ b/_posts/2016-11-6-TYSKBBAM.html
@@ -1,7 +1,8 @@
 ---
 title: "Things You Should Know Before Buying a Motorcycle"
-layout: "default"
+layout: "post"
 published: true
+post-image: "TTKBYBAM.jpg"
 categories: "getting-started"
 ---
 
