--- a/getting-started.html
+++ b/getting-started.html
@@ -7,10 +7,12 @@ published: true
 <h1>Getting Started</h1>
 <br />
 
-<ul>
+
   {% for post in site.categories.getting-started %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
+     <a href="{{ post.url }}">
+	     <div>
+	      {{ post.title }}
+	      	{{ post.post-image }}
+	    </div>
+	</a>
   {% endfor %}
-</ul>
