--- a/getting-started.html
+++ b/getting-started.html
@@ -12,7 +12,7 @@ published: true
      <a href="{{ post.url }}">
 	     <div>
 	      {{ post.title }}
-	      	{{ post.post-image }}
+	      	<img src="/images/post-images/{{ post.post-image }}" alt="{{ post.title }}" />
 	    </div>
 	</a>
   {% endfor %}
