--- a/_posts/2016-11-6-TYSKBBAM.html
+++ b/_posts/2016-11-6-TYSKBBAM.html
@@ -6,6 +6,9 @@ post-image: "TTKBYBAM.jpg"
 categories: "getting-started"
 ---
 
-<h1>Things You Should Know Before Buying a Motorcycle</h1>
-<br />
+SWAG
+SWAG
+SWGA
+BOOBS
+Breasticles
 
