adding CSS for category grids

--- a/_posts/2016-11-5-TYSKBBAM2.html
+++ b/_posts/2016-11-5-TYSKBBAM2.html
@@ -1,5 +1,5 @@
 ---
-title: "Things You Should Know Before Buying a Motorcycle"
+title: "Test 2"
 layout: "post"
 published: true
 post-image: "TTKBYBAM.jpg"
