--- a/getting-started.html
+++ b/getting-started.html
@@ -7,12 +7,25 @@ published: true
 <h1>Getting Started</h1>
 <br />
 
+<div class="row-fluid">
 
   {% for post in site.categories.getting-started %}
-     <a href="{{ post.url }}">
-	     <div>
-	      {{ post.title }}
-	      	<img src="/images/post-images/{{ post.post-image }}" alt="{{ post.title }}" />
-	    </div>
-	</a>
+	
+	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+		<a href="{{ post.url }}">
+		<div class="postwrapsmall hover">
+		
+			<img src="../images/posts/{{ post.post-image }}">
+			
+			<div class="postinfo">
+				<div class="postname">{{ post.title }}</div>
+			</div>
+	
+		</div>
+		</a> 
+	</div>
+	
+	
   {% endfor %}
+
+</div>
