post grid testing

--- a/getting-started.html
+++ b/getting-started.html
@@ -15,7 +15,7 @@ published: true
 		<a href="{{ post.url }}">
 		<div class="postwrapsmall hover">
 		
-			<img src="../images/posts/{{ post.post-image }}">
+			<img src="/images/postimages/{{ post.post-image }}">
 			
 			<div class="postinfo">
 				<div class="postname">{{ post.title }}</div>
