--- a/controls-and-specs.html
+++ b/controls-and-specs.html
@@ -1,15 +1,15 @@
 ---
-title: "Getting Started | MotoBasics.com"
+title: "Controls & Specs | MotoBasics.com"
 layout: "default"
 published: true
 ---
 
-<h1>Getting Started</h1>
+<h1>Control & Specs</h1>
 <br />
 
 <div class="row-fluid">
 
-  {% for post in site.categories.getting-started %}
+  {% for post in site.categories.controls-and-specs %}
 	
 	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
 		<a href="{{ post.url }}">
