--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -1,5 +1,5 @@
 ---
-title: "The Pros and Cons of Owning a Motorcycle"
+title: "THE PROS AND CONS OF OWNING A MOTORCYCLE"
 layout: "post"
 published: true
 post-image: "TTKBYBAM.jpg"
@@ -8,9 +8,9 @@ categories: "getting-started"
 
 <p>(**Pic of rider in jacket pondering, while standing between a car and a motorcycle)</p>
 
-<p>Everyone should try riding a motorcycle, there are many things riders give up, especially when compared to a car. I have tried to outline some of the most important things to consider when thinking about buying and owning a motorcycle. While new riders usually just want to jump on a bike, I implore you to please be aware of the potential downsides - you certainly do not want any surprises.</p>
+<p>Everyone should try riding a motorcycle - except hippies. As badass as motorcycles are, there are many things riders give up, especially when compared to a car. I have tried to outline some of the most important things to consider when thinking about buying and owning a motorcycle. While new riders usually just want to jump on a bike, I implore you to please be aware of the potential downsides - you certainly do not want any surprises.</p>
 
-<h2><u>Pros:</u></h2>
+<h2>Pros:</h2>
 
 <p>
 <b>Cost:</b> Compared to a car, a cheap or medium-priced motorcycle will probably cost you less over the lifetime of the vehicle. Unless you own a rare or pricy model, parts, upkeep, and service jobs for a motorcycle are usually cheaper or simpler than for cars. While it might not always make practical sense to buy a motorcycle before buying a car, it often makes great financial and practical sense to purchase a motorcycle over a car as a second vehicle.<br />
@@ -21,7 +21,7 @@ categories: "getting-started"
 <b>The "Cool" Factor:</b> Speaking both objectively and scientifically, riding a motorcycle is just plain awesome. It has been demonstrably proven that once you have mastered the ride, riding a motorcycle increases how cool you feel by at least one billion percent, give or take about a 3% margin of error. :)
 </p>
 
-<h2><u>Cons:</u></h2>
+<h2>Cons:</h2>
 
 <p>
 <b>Increased Involvement while Riding:</b> Riding a motorcycle is a lot more involved than driving a car. You cannot turn on cruise control, stretch your legs, drink your beverage, change the radio station and talk on your cell phone while steering with your thighs. Riding a motorcycle involves constant multi-tasking, the most basic being balancing the vehicle while holding down the throttle to maintain speed. To ride safely, you should never lose concentration while on your motorcycle or allow yourself to be distracted. If you try to multitask while riding a motorcycle, moving your hands or feet away from where they should be, you are diminishing your ability to react to potential situations and developments on the road. While all drivers should abide by the same standards, I would argue that cars are more forgiving.<br />
@@ -38,7 +38,7 @@ categories: "getting-started"
 
 <p>In the sections above, I used many generalities, and some riders may find some aspects of these points debatable. I have tried to accurately categorize the above items for most riders, but everyone has differing riding experiences. Below are a few items that, in my experience, can be categorized as either pros or cons.</p>
 
-<h2><u>Debatable:</u></h2>
+<h2>Debatable:</h2>
 
 <p>
 <b>Longer trips:</b> A few hours of non-stop driving are no big deal for most riders. You may be a bit sore or uncomfortable if you didn't invest in the right accessories, but ultimately you are still happy with the ride. At some point, however, fatigue, soreness, and other unpleasant feelings can replace the euphoria of a pleasant ride. Everyone has different limits, but make sure you plan for fatigue or rest. Sadly, you cannot sleep in your motorcycle like you can with a car.<br />
