--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -100,7 +100,11 @@ categories: "getting-started"
 	
 	</div>
 	
-	<div class="col-xs-12"><p>In the sections above, I used many generalities, and some riders may find some aspects of these points debatable. I have tried to accurately categorize the above items for most riders, but everyone has differing riding experiences. Below are a few items that, in my experience, can be categorized as either pros or cons.</div></
+	<div class="col-xs-12">
+	
+		<p>In the sections above, I used many generalities, and some riders may find some aspects of these points debatable. I have tried to accurately categorize the above items for most riders, but everyone has differing riding experiences. Below are a few items that, in my experience, can be categorized as either pros or cons.</p>
+	
+	</div>
 	
 	
 	<div class="col-xs-12">
