--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -143,7 +143,7 @@ categories: "getting-started"
 	    <table>
 	    <tr>
 	    <td><img src="/images/sig-stamp.png" /></td>
-	    <td><h4 class="red">-Sean</h4>
+	    <td><h5 class="red">Sean</h5>
 	    
 	     Co-Creator and Administrator of MotoBasics.com
 	     </td>
