--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -1,9 +1,9 @@
 ---
-title "THE PROS AND CONS OF OWNING A MOTORCYCLE"
-layout "post"
-published true
-post-image "TTKBYBAM.jpg"
-categories "getting-started"
+title: "THE PROS AND CONS OF OWNING A MOTORCYCLE"
+layout: "post"
+published: true
+post-image: "TTKBYBAM.jpg"
+categories: "getting-started"
 ---
 
 
