--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -6,9 +6,13 @@ post-image: "TTKBYBAM.jpg"
 categories: "getting-started"
 ---
 
+<br />
 
-<div class="col-xs-12">(**Pic of rider in jacket pondering, while standing between a car and a motorcycle)</div>
+<div class="col-xs-12">
 
+	<p>(**Pic of rider in jacket pondering, while standing between a car and a motorcycle)</p>
+
+</div>
 
 <div class="col-xs-12">
 
