--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -142,14 +142,16 @@ categories: "getting-started"
 
 <div class="col-xs-12">
    
-    <table>
-    <tr>
-    <td><img src="/images/sig-stamp.png" /></td>
-    <td><h5>Sean</h5>
+    <div class="col-xs-6">
+    	<img src="/images/sig-stamp.png" />
+	</div>    
+	
+	<div class="col-xs-6">
+		<h5>Sean</h5>
+	</div>
     
-     Co-Creator and Administrator of MotoBasics.com
-     </td>
-    </tr>
-    </table>
+	<div class="col-xs-12">
+    	<p>Co-Creator and Administrator of MotoBasics.com</p>
+    </div>
 
 </div>
