--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -140,7 +140,7 @@ categories: "getting-started"
 
 </div>
 
-<div style="max-width:200px;">
+<div>
    
     <div class="col-xs-6">
     	<img src="/images/sig-stamp.png" />
