--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -147,8 +147,8 @@ categories: "getting-started"
 	</div>    
 	
 	<div class="col-xs-6">
-		<h5>Sean</h5><br />
-		<p>Co-Creator and Administrator of MotoBasics.com</p>
+		<h5 style="float:left;">Sean</h5><br />
+		<p style="float:left;">Co-Creator and Administrator of MotoBasics.com</p>
 	</div>
 
 </div>
