--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -142,12 +142,12 @@ categories: "getting-started"
 
 <div>
    
-    <div class="col-xs-6">
+    <div style="display:inline; background-color:green">
     	<img src="/images/sig-stamp.png" />
 	</div>    
 	
-	<div class="col-xs-6">
-		<h5 style="float:left;">Sean</h5><br />
+	<div style="display:inline;background-color:red">
+		<h5 style="float:left;">Sean</h5>
 		<p style="float:left;">Co-Creator and Administrator of MotoBasics.com</p>
 	</div>
 
