--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -142,11 +142,11 @@ categories: "getting-started"
 
 <div>
    
-    <div style="display:inline; background-color:green">
+    <div style="display:inline-block;">
     	<img src="/images/sig-stamp.png" />
 	</div>    
 	
-	<div style="display:inline;background-color:red">
+	<div style="display:inline-block;">
 		<h5>Sean</h5>
 		<p>Co-Creator and Administrator of MotoBasics.com</p>
 	</div>
