--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -147,8 +147,8 @@ categories: "getting-started"
 	</div>    
 	
 	<div style="display:inline-block;">
-		<h5>Sean</h5>
-		<p>Co-Creator and Administrator of MotoBasics.com</p>
+		<p class="bold">Sean<br />
+		Co-Creator and Administrator of MotoBasics.com</p>
 	</div>
 
 </div>
