--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -147,8 +147,7 @@ categories: "getting-started"
 	</div>    
 	
 	<div style="display:inline-block;">
-		<p class="bold">Sean<br />
-		Co-Creator and Administrator of MotoBasics.com</p>
+		<p><strong>Sean</strong> - 	Co-Creator and Administrator of MotoBasics.com</p>
 	</div>
 
 </div>
