--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -22,7 +22,7 @@ categories: "getting-started"
 
 
 
-<div class="col-xs-12">
+<div class="row-fluid">
 
 	<h2>Pros</h2>
 	
@@ -147,7 +147,7 @@ categories: "getting-started"
 	</div>    
 	
 	<div style="display:inline-block;">
-		<p><strong>Sean</strong> - 	Co-Creator and Administrator of MotoBasics.com</p>
+		<p><strong>Sean</strong> - 	<em>Co-Creator and Administrator of MotoBasics.com</em></p>
 	</div>
 
 </div>
