--- a/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
+++ b/_posts/2017-01-20-pros-and-cons-of-owning-a-motorcycle.html
@@ -1,5 +1,5 @@
 ---
-title: "THE PROS AND CONS OF OWNING A MOTORCYCLE"
+title: "The Pros And Cons Of Owning a Motorcycle"
 layout: "post"
 published: true
 post-image: "TTKBYBAM.jpg"
