more aesthetic changes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: MotoBasics | Live to Ride, Ride Safe to Live!
-layout: default
+title: "KushBasics | Educate Yourself"
+layout: "default"
 published: true
 ---
 Hallo, Welt! :)
